crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__codegen_conditional_slot_with_else_does_not_append_undefined.snap
---
source: crates/vize_atelier_core/src/codegen.rs
expression: output.as_str()
---
const { resolveComponent: _resolveComponent, openBlock: _openBlock, createBlock: _createBlock, createTextVNode: _createTextVNode, createSlots: _createSlots, withCtx: _withCtx } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MyDialog = _resolveComponent("MyDialog")
  
  return (_openBlock(), _createBlock(_component_MyDialog, null, _createSlots({ _: 2 /* DYNAMIC */ }, [
    (step === 1)
      ? {
        name: "header",
        fn: _withCtx(() => [
          _createTextVNode("First")
        ]),
        key: "0"
      }
    : {
      name: "header",
      fn: _withCtx(() => [
        _createTextVNode("Second")
      ]),
      key: "1"
    }
  ]), 1024 /* DYNAMIC_SLOTS */))
}
