crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__codegen_interpolation.snap
---
source: crates/vize_atelier_core/src/codegen.rs
expression: output.as_str()
---
const { toDisplayString: _toDisplayString, openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(msg), 1 /* TEXT */))
}
