crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__codegen_looped_slot_key_and_index_aliases_stay_local_in_dynamic_args.snap
---
source: crates/vize_atelier_core/src/codegen.rs
expression: output.as_str()
---
const { resolveComponent: _resolveComponent, createElementVNode: _createElementVNode, normalizeProps: _normalizeProps, toHandlerKey: _toHandlerKey, openBlock: _openBlock, createBlock: _createBlock, renderList: _renderList, createSlots: _createSlots, withCtx: _withCtx } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_Comp = _resolveComponent("Comp")
  
  return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _: 2 /* DYNAMIC */ }, [
    _renderList(_ctx.list, (item, idx) => {
      return {
        name: "default",
        fn: _withCtx(() => [
          _createElementVNode("div", _normalizeProps({ [idx || ""]: item }), null, 16 /* FULL_PROPS */)
        ])
      }
    }),
    _renderList(_ctx.obj, (val, key) => {
      return {
        name: "item",
        fn: _withCtx(() => [
          _createElementVNode("button", { [_toHandlerKey(key)]: val }, null, 16 /* FULL_PROPS */)
        ])
      }
    })
  ]), 1024 /* DYNAMIC_SLOTS */))
}
